src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Delivery__c</fullName>
        <label>Campaign Delivery Platform</label>
        <picklist>
            <picklistValues>
                <fullName>ContactSync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tagged</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Objective__c</fullName>
        <label>Campaign Objective</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Added Content</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Print Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Banners/Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>MFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US-Retail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribution_Sub_Channels__c</fullName>
        <label>Distribution Sub-Channels</label>
        <picklist>
            <controllingField>Distribution_Channel__c</controllingField>
            <picklistValues>
                <fullName>US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Firm_Specific__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Firm Specific?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for the &quot;My Contacts&quot; development.</description>
        <label>Other Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUNZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AxJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>This field will be used on Business Driven campaigns for reporting purposes. It will allow users to see what group is running this business driven campaign (Consultant relations, institutional, etc.)</description>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saleslogix_ID__c</fullName>
        <externalId>true</externalId>
        <label>Saleslogix ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SilverPop_Updated_Date__c</fullName>
        <label>SilverPop Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type2__c</fullName>
        <description>This field is dependent on the field &quot;Content Type&quot;. We are using this rather than the standard &quot;Type&quot; field because it needs to be multi-select.</description>
        <label>Type</label>
        <picklist>
            <controllingField>Content_Type__c</controllingField>
            <picklistValues>
                <fullName>Corporate Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Hosted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Hosted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Hosted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZoomOut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week in Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategist&apos;s Corner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fact Sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Wealth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heritage Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disruption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADV Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADV Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance and Operational Guidelines Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>408(b)2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offering Memorandum Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooled &amp; CCT Fund Financials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Dollar Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offering Memorandum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Update</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Silverpop_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.ID</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Distribution_Channel__c</columns>
        <columns>Distribution_Sub_Channels__c</columns>
        <columns>Campaign_Delivery__c</columns>
        <columns>Region__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Content_Type__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Brand -</value>
        </filters>
        <label>All Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Driven</fullName>
        <active>true</active>
        <description>Used for Institutional and Retail Sales specific campaigns.</description>
        <label>Business Driven</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Driven</fullName>
        <active>true</active>
        <description>Used for Marketing specific campaigns.</description>
        <label>Marketing Driven</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RegionOnNonUsRetail</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Distribution_Channel__c , &quot;Non-US Retail&quot;) &amp;&amp; ISBLANK(Region__c)</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>Region is required if Distribution Channel is Non-US Retail</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_Stage</fullName>
        <active>true</active>
        <errorConditionFormula>!ISPICKVAL(Status, &apos;initiated&apos;) &amp;&amp; (
Len(Campaign_Objective__c)==0 ||Len(Target_Audience__c)==0
)</errorConditionFormula>
        <errorMessage>Please enter campaign objective and target audience</errorMessage>
    </validationRules>
</CustomObject>